--- a/DO-API/source/view/UI/do_ListView/onetemplate/main.ui
+++ b/DO-API/source/view/UI/do_ListView/onetemplate/main.ui
@@ -1,1 +1,49 @@
-{"RootView":{"x":"0","width":"750","y":"0","type":"do_ALayout","height":"1334"}}
+{
+	"RootView":{
+		"x":"0",
+		"width":"750",
+		"y":"0",
+		"type":"do_ALayout",
+		"views":[
+			{
+				"bgColor":"DADADAFF",
+				"x":"72",
+				"width":"271",
+				"y":"74",
+				"fontSize":"24",
+				"id":"do_Button_1",
+				"text":"重置",
+				"type":"do_Button"
+			},
+			{
+				"bgColor":"A6CF1CFF",
+				"x":"386",
+				"width":"276",
+				"y":"75",
+				"fontSize":"24",
+				"id":"do_Button_2",
+				"text":"删除",
+				"type":"do_Button"
+			},
+			{
+				"bgColor":"00000000",
+				"templates":"source://view/UI/do_ListView/onetemplate/c/c.ui",
+				"width":"750",
+				"y":"200",
+				"id":"do_ListView_1",
+				"type":"do_ListView",
+				"height":"1000"
+			},
+			{
+				"width":"750",
+				"y":"1215",
+				"maxLines":"4",
+				"fontSize":"24",
+				"id":"do_Label_1",
+				"type":"do_Label",
+				"height":"-1"
+			}
+		],
+		"height":"1334"
+	}
+}
