--- a/DO-API/source/view/UI/do_FrameAnimationView/main.ui
+++ b/DO-API/source/view/UI/do_FrameAnimationView/main.ui
@@ -16,9 +16,13 @@
 			{
 				"x":"10",
 				"width":"730",
-				"y":"108",
+				"y":"100",
+				"maxLines":"3",
+				"fontSize":"24",
 				"id":"do_Label_1",
-				"type":"do_Label"
+				"text":"加载gif动图的视图，也可以将多张图片组合设置为动图效果；gifSource:和imagesSource属性不会同时起作用，两个属性同时设置时以imagesSource为准",
+				"type":"do_Label",
+				"height":"120"
 			},
 			{
 				"bgColor":"BEBEBEFF",
