--- a/DO-API/source/view/UI/do_CoverFlowView/one/index.ui
+++ b/DO-API/source/view/UI/do_CoverFlowView/one/index.ui
@@ -7,6 +7,7 @@
 		"views":[
 			{
 				"bgColor":"DBDBDBFF",
+				"looping":"true",
 				"templates":"source://view/UI/do_CoverFlowView/one/c/ct1.ui,source://view/UI/do_CoverFlowView/one/c/ct2.ui,source://view/UI/do_CoverFlowView/one/c/ct3.ui",
 				"x":"50",
 				"width":"650",
