--- a/DO-API/source/view/UI/do_WebView/main.ui
+++ b/DO-API/source/view/UI/do_WebView/main.ui
@@ -43,8 +43,10 @@
 			{
 				"width":"750",
 				"y":"250",
+				"zoom":"true",
 				"id":"do_WebView_1",
 				"type":"do_WebView",
+				"allowVideoFullScreenPlayback":"true",
 				"url":"https://www.baidu.com/",
 				"height":"909"
 			},
@@ -59,6 +61,6 @@
 				"height":"-1"
 			}
 		],
-		"height":"1334"
+		"height":"1224"
 	}
 }
